--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,8 +33,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:textColor="@color/graytextblack"
                 android:layout_height="wrap_content"
+                android:textColor="@color/graytextblack"
                 android:textSize="18sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -42,9 +42,10 @@
     </LinearLayout>
 
     <com.todkars.shimmer.ShimmerRecyclerView
+        android:id="@+id/rvHomeItemList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llHeader" />
+        app:layout_constraintTop_toBottomOf="@id/llHeader" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
