--- a/app/src/main/res/drawable/ripple_effect.xml
+++ b/app/src/main/res/drawable/ripple_effect.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#5E5E5E">
+    android:color="#B3B3B3">
     <item
         android:id="@android:id/mask"
         android:drawable="@android:color/white" />
